--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <html>
 <head>
-	<title>my webpage</title>
+	<title>Coronavirus|Covid-19|Index Page</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-	hello world.hello again!! hello hello hello
+      <header>
+      	<nav>
+      		<ul>
+      			<li><a href="#">Across the Globe</a></li>
+      			<li><a href="#">Here in India</a></li>
+            </ul>
+        </nav>
+       </header>
+       <section>
+       	  <div class="logo">
+       	  	<div class="text">
+       	  		<h1>Coronavirus|Covid-19</h1>
+       	  		<p>The ongoing pandamic</p>
+       	  	</div>
+       	  </div>
+       </section>
+       <section>
+       	   <div class="about">
+       	   	  <h3>About</h3>
+       	   	  <p>Coronavirus disease 2019 (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2).[8] The disease was first identified in December 2019 in Wuhan, the capital of China's Hubei province, and has since spread globally, resulting in the ongoing 2019–20 coronavirus pandemic.[9][10] As of 3 May 2020, more than 3.44 million cases have been reported across 187 countries and territories, resulting in more than 244,000 deaths. More than 1.1 million people have recovered.[7]
+
+Common symptoms include fever, cough, fatigue, shortness of breath, and loss of smell and taste.[5][11][12] While the majority of cases result in mild symptoms, some progress to viral pneumonia, multi-organ failure, or cytokine storm.[9][13][14] The time from exposure to onset of symptoms is typically around five days but may range from two to fourteen days.[5][15]</p>
+       </div>
+
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/5DGwOJXSxqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+       </section>  
+       <footer>
+       	    <p>Created by-Ankit Atrey</p>
+       </footer>
 </body>	
