--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <header>
       	<nav>
       		<ul>
-      			<li><a href="./pages/across-the-globe.html">Across the Globe</a></li>
+      			<li><a href="pages/across-the-globe.html">Across the Globe</a></li>
       			<li><a href="#">Here in India</a></li>
             </ul>
         </nav>
