--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       	<nav>
       		<ul>
       			<li><a href="pages/across-the-globe.html">Across the Globe</a></li>
-      			<li><a href="#">Here in India</a></li>
+      			<li><a href="pages/here-in-india.html">Here in India</a></li>
             </ul>
         </nav>
        </header>
