--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+	<style>
+body {
+  background-image: url('resources/images/1321671.jpg');
+}
+</style>
+	
       <header>
       	<nav>
       		<ul>
