--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       		<ul>
       			<li><a href="pages/across-the-globe.html">Across the Globe</a></li>
       			<li><a href="pages/here-in-india.html">Here in India</a></li>
+			<li><a href="pages/india-data.php">Here in India</a></li>
             </ul>
         </nav>
        </header>
