--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	
+
       <header>
       	<nav>
       		<ul>
@@ -33,8 +33,8 @@ Common symptoms include fever, cough, fatigue, shortness of breath, and loss of 
 
        <iframe width="560" height="315" src="https://www.youtube.com/embed/5DGwOJXSxqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-       </section>  
+       </section>
        <footer>
-       	    <p>Created by-Ankit Atrey</p>
+       	    <p>Created by-Ankit Atrey (?)</p>
        </footer>
-</body>	
+</body>
