--- a/pages/across-the-globe.html
+++ b/pages/across-the-globe.html
@@ -1,30 +1,21 @@
 <html>
 <head>
-	<title>Coronavirus|Covid-19|Index Page</title>
+	<title>Across the globe | COVID-19</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
        <section>
-       	  <div class="logo">
-       	  	<div class="text">
-       	  		<h1>Coronavirus|Covid-19</h1>
-       	  		<p>The ongoing pandamic</p>
-       	  	</div>
-       	  </div>
+       	  	<div class="heading-globe">
+       	  		<h1>COVID-19 stats across the globe</h1>
+       	    </div>
        </section>
+
        <section>
-       	   <div class="about">
+       	   <div class="">
        	   	  <h3>About</h3>
-       	   	  <p>Coronavirus disease 2019 (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2).[8] The disease was first identified in December 2019 in Wuhan, the capital of China's Hubei province, and has since spread globally, resulting in the ongoing 2019–20 coronavirus pandemic.[9][10] As of 3 May 2020, more than 3.44 million cases have been reported across 187 countries and territories, resulting in more than 244,000 deaths. More than 1.1 million people have recovered.[7]
-
-Common symptoms include fever, cough, fatigue, shortness of breath, and loss of smell and taste.[5][11][12] While the majority of cases result in mild symptoms, some progress to viral pneumonia, multi-organ failure, or cytokine storm.[9][13][14] The time from exposure to onset of symptoms is typically around five days but may range from two to fourteen days.[5][15]</p>
        </div>
-
-       <iframe width="560" height="315" src="https://www.youtube.com/embed/5DGwOJXSxqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-       </section>  
+       </section>
        <footer>
        	    <p>Created by-Ankit Atrey</p>
        </footer>
-</body>	
+</body>
