Added new pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>COVID-19</title>
+<title>Home | COVID-19</title>
 <style type="text/css">
+h1 {
+
+text-shadow: 0 0 20px #FF0000;
+}
+p { 
+  text-shadow: 2px 1px 1px #000;
+}
 body {
 	background-image: url(resources/images/r-bg-2.jpg);
 	background-repeat: no-repeat;
@@ -42,8 +49,8 @@ body,td,th {
 </table>
 </center>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<h1>
+<p>&nbsp;</p> 
+<h1 >
  <img src="resources/images/SARS-CoV-2_without_background.png" width="79" height="79" style="vertical-align:middle">  <span class="heading-about">About COVID-19</span></h1>
 <p>&nbsp;</p>
 <p class="font-front-page">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.<br>
