--- a/pages/links.html
+++ b/pages/links.html
@@ -1,10 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>COVID-19</title>
+<title>Links | COVID-19</title>
 <style type="text/css">
+h1 {
+text-shadow: 0 0 20px #FF0000;
+}
+p { 
+  text-shadow: 2px 1px 1px #000;
+}
 body {
-	background-image: url(../resources/images/red-striped.jpg);
+	background-image: url(../resources/images/red-strips.jpg);
 	background-repeat: repeat;
 	margin-left: 150px;
 	margin-top: 50px;
@@ -26,12 +32,44 @@ body,td,th {
 	font-family: Verdana, Geneva, sans-serif;
 }
 </style>
-<link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
+<style>A {text-decoration: none;} </style>
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
+<ima>
+<h1 align="center">&nbsp;</h1>
+<h1 align="center">Navigation</h1>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+
+<table width="392" border="6" align="center" background="../resources/images/blur/r-bg-2.jpg">
+   <tr>
+    <td height="50" align="center"><a href="../index.html">Home</a></td>
+  </tr>
+  <tr>
+    <td width="372" height="50" align="center"><a href="india-stats.html">India Stats</a></td>
+  </tr>
+  <tr>
+    <td height="50" align="center"><a href="world-stats.html">World Stats</a></td>
+  </tr>
+  <tr>
+    <td height="50" align="center"><a href="precautions.html">Precautionary Measures</a></td>
+  </tr>
+  <tr>
+    <td height="50" align="center"><a href="gallery.html">Gallery</a></td>
+  </tr>
+  <tr>
+    <td height="50" align="center"><a href="history.html">History of coronavirus</a></td>
+  </tr>
+  <tr>
+    <td height="50" align="center"><a href="about-site.html">About Website</a></td>
+  </tr>
+</table>
+<p>&nbsp;</p>
 </body>
 </html>
 
