fit to smaller screen

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Home | COVID-19</title>
 <style type="text/css">
 h1 {
@@ -13,11 +14,13 @@ p {
 body {
 	background-image: url(resources/images/r-bg-2.jpg);
 	background-repeat: no-repeat;
+      background-size:cover;
 	margin-left: 150px;
 	margin-top: 50px;
 	margin-right: 150px;
 	margin-bottom: 20px;
 }
+
 body,td,th {
 	color: #FFF;
 	font-family: Verdana, Geneva, sans-serif;
