--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Home | COVID-19</title>
@@ -7,12 +7,12 @@ h1 {
 
 text-shadow: 0 0 20px #FF0000;
 }
-p { 
+p {
   text-shadow: 2px 1px 1px #000;
 }
 body {
 	background-image: url(resources/images/r-bg-2.jpg);
-	background-repeat: no-repeat;
+	background-repeat: repeat;
 	margin-left: 150px;
 	margin-top: 50px;
 	margin-right: 150px;
@@ -49,7 +49,7 @@ body,td,th {
 </table>
 </center>
 <p>&nbsp;</p>
-<p>&nbsp;</p> 
+<p>&nbsp;</p>
 <h1 >
  <img src="resources/images/SARS-CoV-2_without_background.png" width="79" height="79" style="vertical-align:middle">  <span class="heading-about">About COVID-19</span></h1>
 <p>&nbsp;</p>
