--- a/pages/india-stats.html
+++ b/pages/india-stats.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>India-Stats | COVID-19</title>
@@ -6,7 +6,7 @@
 h1 {
 text-shadow: 0 0 20px #FF0000;
 }
-p { 
+p {
   text-shadow: 2px 1px 1px #000;
 }
 body {
