Html tag changes

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- meta name="viewport" content="width=device-width, initial-scale=1" -->
 <title>Home | COVID-19</title>
 <style type="text/css">
 h1 {
 
 text-shadow: 0 0 20px #FF0000;
 }
-p { 
+p {
   text-shadow: 2px 1px 1px #000;
 }
+
 body {
 	background-image: url(resources/images/r-bg-2.jpg);
-	background-repeat: no-repeat;
-      background-size:cover;
+	background-repeat: repeat;
 	margin-left: 150px;
 	margin-top: 50px;
 	margin-right: 150px;
@@ -52,7 +52,7 @@ body,td,th {
 </table>
 </center>
 <p>&nbsp;</p>
-<p>&nbsp;</p> 
+<p>&nbsp;</p>
 <h1 >
  <img src="resources/images/SARS-CoV-2_without_background.png" width="79" height="79" style="vertical-align:middle">  <span class="heading-about">About COVID-19</span></h1>
 <p>&nbsp;</p>
