--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Gallery | COVID-19</title>
@@ -6,7 +6,7 @@
 h1 {
 text-shadow: 0 0 20px #FF0000;
 }
-p {
+p { 
   text-shadow: 2px 1px 1px #000;
 }
 body {
@@ -40,10 +40,19 @@ body,td,th {
 <style>A {text-decoration: none;} </style>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
 <ima>
-<h1 align="center">&nbsp;</h1>
 <h1 align="center">Gallery</h1>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
+<table width="1350" border="6" align="center" cellpadding="2">
+  <tr>
+    <td width="450" height="264"><img src="../resources/images/gallery/1.jpg" width="450" height="264"></td>
+    <td width="450"><img src="../resources/images/gallery/3.jpg" width="450" height="264"></td>
+    <td width="450"><img src="../resources/images/gallery/2.jpg" width="450" height="264"></td>
+  </tr>
+  <tr>
+    <td height="264"><img src="../resources/images/gallery/4.jpg" width="450" height="264"></td>
+    <td><img src="../resources/images/gallery/5.jpg" width="450" height="264"></td>
+    <td><img src="../resources/images/gallery/6.jpg" width="450" height="264"></td>
+  </tr>
+</table>
 <p align="center">&nbsp;</p>
 
 <table width="268" height="46" border="1" align="center" bgcolor="#000000">
