--- a/pages/about-site.html
+++ b/pages/about-site.html
@@ -45,6 +45,32 @@ body,td,th {
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
+<div class="container">
+	<h2>Purpose</h2>
+	<p>This website is all about Covid-19.It consists of all the necessary information such as origin ,signs and symptoms, causes, prevention etc.
+    &nbsp This website is part of a special summer project.All the details of the project are as follows:  </p>
+    <table border="2">
+    	<tr>
+    		<td>Assigned By:</td>
+    		<td>Mr.Vinayak Sir</td>
+    	</tr>
+    	<tr>
+    		<td>Duration</td>
+    		<td>1 week</td>
+    	</tr>
+    	<tr>
+    		<td>Submission Date</td>
+    		<td>8 May</td>
+    	</tr>
+    	<tr>
+    		<td>Languages used</td>
+    		<td>HTML and CSS</td>
+    	</tr>
+    
+    </table>
+</div>
+
+
 
 <table width="268" height="46" border="1" align="center" bgcolor="#000000">
   <tr>
