Added links and refreshed gallery

--- a/pages/links.html
+++ b/pages/links.html
@@ -6,7 +6,7 @@
 h1 {
 text-shadow: 0 0 20px #FF0000;
 }
-p {
+p { 
   text-shadow: 2px 1px 1px #000;
 }
 body {
@@ -46,29 +46,49 @@ body,td,th {
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 
-<table width="392" border="6" align="center" background="../resources/images/blur/r-bg-2.jpg">
+<table width="1045" border="6" align="center" background="../resources/images/blur/r-bg-2.jpg">
    <tr>
     <td height="50" align="center"><a href="../index.html">Home</a></td>
+   <td height="50" align="center"><a href="about-site.html">About Website</a></td>
   </tr>
   <tr>
-    <td width="372" height="50" align="center"><a href="india-stats.html">India Stats</a></td>
+    <td width="525" height="50" align="center"><a href="india-stats.html">India Stats</a></td>
+    <td width="269" align="center"><a href="about-covid-19.html">About COVID-19</a></td>
   </tr>
   <tr>
     <td height="50" align="center"><a href="world-stats.html">World Stats</a></td>
+    <td align="center"><a href="effect-world.html">Effect on World</a></td>
   </tr>
   <tr>
     <td height="50" align="center"><a href="precautions.html">Precautionary Measures</a></td>
+    <td align="center"><a href="situation-india.html">Situation in India</a></td>
   </tr>
   <tr>
     <td height="50" align="center"><a href="gallery.html">Gallery</a></td>
+    <td align="center"><a href="medical-solutions.html">Medical Solutions</a></td>
   </tr>
   <tr>
     <td height="50" align="center"><a href="history.html">History of coronavirus</a></td>
+    <td align="center"><a href="social-distancing.html">Social Distancing</a></td>
   </tr>
   <tr>
-    <td height="50" align="center"><a href="about-site.html">About Website</a></td>
+    <td height="50" align="center"><a href="self-awareness.html">Self awareness of people in society</a></td>
+    <td align="center"><a href="effect-lockdown.html">Effect of lockdown</a></td>
+</tr>
+  <tr>
+    <td height="50" align="center"><a href="effect-economy.html">Effect on economy</a></td>
+    <td align="center"><a href="effect-agriculture.html">Effect on Agriculture, Business and Education</a></td>
+  </tr>
+  <tr>
+    <td height="50" align="center"><a href="effect-poor.html">Effect on poor families and help by society</a></td>
+    <td align="center"><a href="role-mobile.html">Role of mobile apps in door to door delivery of household items and medicines</a></td>
+  </tr>
+  <tr>
+    <td height="50" align="center"><a href="effect-social-gathering.html">Effect of COVID-19 on social gathering and meeting in future</a></td>
+    <td align="center"><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO Website on COVID-19</a></td>
   </tr>
 </table>
 <p>&nbsp;</p>
 </body>
 </html>
+
