added about-site info

--- a/pages/about-site.html
+++ b/pages/about-site.html
@@ -46,29 +46,56 @@ body,td,th {
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <div class="container">
-	<h2>Purpose</h2>
-	<p>This website is all about Covid-19.It consists of all the necessary information such as origin ,signs and symptoms, causes, prevention etc.
-    &nbsp This website is part of a special summer project.All the details of the project are as follows:  </p>
-    <table border="2">
-    	<tr>
-    		<td>Assigned By:</td>
-    		<td>Mr.Vinayak Sir</td>
-    	</tr>
-    	<tr>
-    		<td>Duration</td>
-    		<td>1 week</td>
-    	</tr>
-    	<tr>
-    		<td>Submission Date</td>
-    		<td>8 May</td>
-    	</tr>
-    	<tr>
-    		<td>Languages used</td>
-    		<td>HTML and CSS</td>
-    	</tr>
+    <div class="purpose"></div>
+       <h2 align="center">Purpose</h2>
+	     <p> This website is all about Covid-19.It consists of all the  necessary information such as origin ,signs and symptoms, causes, 
+         preve1ntion etc.<br>
+        </p>
+
+        </div>
+        <div class="content">
+         <p align="center">The contents of this site are:</p>
+         <ul>
+             <li>About Covid-19</li>
+             <li>Effect on world</li>
+             <li>Situation in India</li>
+             <li>Medical Solutions</li>
+             <li>Social Distancing</li>
+             <li>Effect of Lockdown</li>
+             <li>Self Awareness of people in society</li>
+             <li>Effect on Economy</li>
+         </ul> 
+        </div>
+        <div class="details">
+            <h2 align="center">Details about the project</h2>
+            <table border="2">
+    	      <tr>
+    		    <td>Assigned By:</td>
+    		    <td>Mr.Vinayak Sir</td>
+    	     </tr>
+    	     <tr>
+    		  <td>Duration</td>
+    		  <td>1 week</td>
+    	     </tr>
+    	     <tr>
+    		   <td>Submission Date</td>
+    		   <td>8 May</td>
+    	      </tr>
+    	      <tr>
+    		   <td>Languages used</td>
+    		   <td>HTML and CSS</td>
+    	      </tr>
+              <tr>
+                  <td>Website on Github</td>
+                  <td><a href=" https://ankitatrey.github.io/covid-19/">Click Here</a></td>
+              </tr>
+              <tr>
+                  <td>Contributed By:</td>
+                  <td>Ashutosh Singh<br>Ankit Atrey</td>
+              </tr>
     
-    </table>
-</div>
+            </table>
+        </div>
 
 
 
