--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -17,6 +17,18 @@ body {
 	margin-right: 150px;
 	margin-bottom: 20px;
 }
+table{
+  border-radius: 10px;
+  
+}
+  td{
+    padding: 5px;
+  }
+}
+img{
+  border-radius: 20px;
+  border:10 dotted #21222b ;
+}
 body,td,th {
 	color: #FFF;
 	font-family: Verdana, Geneva, sans-serif;
@@ -39,9 +51,9 @@ body,td,th {
 </head>
 <style>A {text-decoration: none;} </style>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
-<ima>
+
 <h1 align="center">Gallery</h1>
-<table width="1350" border="6" align="center" cellpadding="2">
+<table width="1000" border="6" align="center" cellpadding="10" >
   <tr>
     <td width="450" height="264"><img src="../resources/images/gallery/1.jpg" width="450" height="264"></td>
     <td width="450"><img src="../resources/images/gallery/3.jpg" width="450" height="264"></td>
