--- a/pages/links.html
+++ b/pages/links.html
@@ -38,7 +38,7 @@ body,td,th {
 <link rel="manifest" href="/site.webmanifest">
 </head>
 <style>A {text-decoration: none;} </style>
-<body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
 <h1 align="center">&nbsp;</h1>
 <h1 align="center">Navigation</h1>
