--- a/index.html
+++ b/index.html
@@ -1,71 +1,52 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Home | COVID-19</title>
-<style type="text/css">
-h1 {
-
-text-shadow: 0 0 20px #FF0000;
-}
-p {
-  text-shadow: 2px 1px 1px #000;
-}
-body {
-	background-image: url(resources/images/r-bg-2.jpg);
-	background-repeat: repeat;
-	margin-left: 150px;
-	margin-top: 50px;
-	margin-right: 150px;
-	margin-bottom: 20px;
-}
-body,td,th {
-	color: #FFF;
-	font-family: Verdana, Geneva, sans-serif;
-	font-style: normal;
-}
-.heading-about {
-	font-family: Verdana, Geneva, sans-serif;
-}
-.font-front-page {
-	font-family: Georgia, Times New Roman, Times, serif;
-}
-.front-page-link {
-	font-family: Verdana, Geneva, sans-serif;
-}
-</style>
-<link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>
+    Home | COVID-19
+  </title>
+  <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
-<style>A {text-decoration: none;} </style>
+
 <body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
 
-<center>
-<table width="200" border="1">
+<table width="200" border="1"  align="center">
   <tr>
-    <td><img src="resources/images/label.jpg" width="547" height="113"  /></td>
+    <td>
+      <img src="resources/images/label.jpg" width="547" height="113"  />
+    </td>
   </tr>
 </table>
-</center>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <h1 >
  <img src="resources/images/SARS-CoV-2_without_background.png" width="79" height="79" style="vertical-align:middle">  <span class="heading-about">About COVID-19</span></h1>
-<p>&nbsp;</p>
-<p class="font-front-page">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.<br>
+<br>
+<p class="font-front-page">
+  Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.<br>
 </p>
-<p class="font-front-page">Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.<br>
+<p class="font-front-page">
+  Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.
+  <br>
 </p>
-<p class="font-front-page">The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face. </p>
-<p class="font-front-page">The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it&rsquo;s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).</p>
-<p class="font-front-page">At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments. WHO will continue to provide updated information as soon as clinical findings become available.</p>
+<p class="font-front-page">
+  The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face. 
+</p>
+<p class="font-front-page">
+  The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it&rsquo;s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).
+</p>
+<p class="font-front-page">
+  At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments. WHO will continue to provide updated information as soon as clinical findings become available.
+</p>
 
 <table width="268" height="46" border="1" align="center" bgcolor="#000000">
   <tr>
     <td width="258" align="center"><a href="pages/links.html" >Click Here to know more</a></td>
   </tr>
 </table>
-<p> </p>
+
 </body>
 </html>
