--- a/pages/links.html
+++ b/pages/links.html
@@ -1,51 +1,22 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Links | COVID-19</title>
-<style type="text/css">
-h1 {
-text-shadow: 0 0 20px #FF0000;
-}
-p { 
-  text-shadow: 2px 1px 1px #000;
-}
-body {
-	background-image: url(../resources/images/red-strips.jpg);
-	background-repeat: repeat;
-	margin-left: 150px;
-	margin-top: 50px;
-	margin-right: 150px;
-	margin-bottom: 20px;
-}
-body,td,th {
-	color: #FFF;
-	font-family: Verdana, Geneva, sans-serif;
-	font-style: normal;
-}
-.heading-about {
-	font-family: Verdana, Geneva, sans-serif;
-}
-.font-front-page {
-	font-family: Georgia, Times New Roman, Times, serif;
-}
-.front-page-link {
-	font-family: Verdana, Geneva, sans-serif;
-}
-</style>
-<link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>
+    Links | COVID-19
+  </title>
+  <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="stylesheet" type="text/css" href="../css/links.css">
 </head>
-<style>A {text-decoration: none;} </style>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
-<h1 align="center">&nbsp;</h1>
+<br>
 <h1 align="center">Navigation</h1>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-
+<br>
+<br>
+<br>
 <table width="1045" border="6" align="center" background="../resources/images/blur/r-bg-2.jpg">
    <tr>
     <td height="50" align="center"><a href="../index.html">Home</a></td>
@@ -88,7 +59,5 @@ body,td,th {
     <td align="center"><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO Website on COVID-19</a></td>
   </tr>
 </table>
-<p>&nbsp;</p>
 </body>
 </html>
-
