--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,66 +2,37 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Contact</title>
-<style type="text/css">
-h1 {
-text-shadow: 0 0 20px #FF0000;
-}
-p { 
-  text-shadow: 2px 1px 1px #000;
-}
-body {
-	background-image: url(../resources/images/red-strips.jpg);
-	background-repeat: repeat;
-	margin-left: 150px;
-	margin-top: 50px;
-	margin-right: 150px;
-	margin-bottom: 20px;
-}
-body,td,th {
-	color: #FFF;
-	font-family: Verdana, Geneva, sans-serif;
-	font-style: normal;
-}
-.heading-about {
-	font-family: Verdana, Geneva, sans-serif;
-}
-.font-front-page {
-	font-family: Georgia, Times New Roman, Times, serif;
-}
-.front-page-link {
-	font-family: Verdana, Geneva, sans-serif;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="../css/pages.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<style>A {text-decoration: none;} </style>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
 <ima>
-<h1 align="center">&nbsp;</h1>
+<br>
 <h1 align="center">Contact / Feedback</h1>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
+<br>
+<br>
+<br>
 <center>
 <form name="input" method="post" action="https://formspree.io/email@gmail.com">
 Name: <input type="text" name="Name" placeholder="Your name">
-<p align="center">&nbsp;</p>
+<br>
+<br>
 Email: <input type="email" name="_replyto" placeholder="Your email">
-<p align="center">&nbsp;</p>
-
+<br>
+<br>
 Message: <textarea name="message" placeholder="Type your message"></textarea>
-<p align="center">&nbsp;</p>
+<br>
 <input type="submit" value="Send">
 <input type="hidden" name="_subject" value="Website Feedback" />
 <input type="hidden" name="_next" value="thanks.html" />
 </form>
 </center>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
+<br>
+<br>
+<br>
 <table width="268" height="46" border="1" align="center" bgcolor="#000000">
   <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
