--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -2,54 +2,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Gallery | COVID-19</title>
-<style type="text/css">
-h1 {
-text-shadow: 0 0 20px #FF0000;
-}
-p { 
-  text-shadow: 2px 1px 1px #000;
-}
-body {
-	background-image: url(../resources/images/red-strips.jpg);
-	background-repeat: repeat;
-	margin-left: 150px;
-	margin-top: 50px;
-	margin-right: 150px;
-	margin-bottom: 20px;
-}
-table{
-  border-radius: 10px;
-  
-}
-  td{
-    padding: 5px;
-  }
-}
-img{
-  border-radius: 20px;
-  border:10 dotted #21222b ;
-}
-body,td,th {
-	color: #FFF;
-	font-family: Verdana, Geneva, sans-serif;
-	font-style: normal;
-}
-.heading-about {
-	font-family: Verdana, Geneva, sans-serif;
-}
-.font-front-page {
-	font-family: Georgia, Times New Roman, Times, serif;
-}
-.front-page-link {
-	font-family: Verdana, Geneva, sans-serif;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="../css/pages.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<style>A {text-decoration: none;} </style>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
 
 <h1 align="center">Gallery</h1>
@@ -65,7 +23,7 @@ body,td,th {
     <td><img src="../resources/images/gallery/6.jpg" width="450" height="264"></td>
   </tr>
 </table>
-<p align="center">&nbsp;</p>
+<br>
 
 <table width="268" height="46" border="1" align="center" bgcolor="#000000">
   <tr>
