Change active link colour

--- a/pages/links.html
+++ b/pages/links.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" type="text/css" href="../css/links.css">
 </head>
-<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
+<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
 <ima>
 <br>
 <h1 align="center">Navigation</h1>
