--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -12,7 +12,7 @@ A {text-decoration: none;} .t1-title {
 	color: #F00;
 }
 </style>
-<body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
 <ima>
 <h1 align="center">&nbsp;</h1>
 <h1 align="center">Thanks for contacting me!</h1>
