--- a/pages/about-covid-19.html
+++ b/pages/about-covid-19.html
@@ -8,7 +8,7 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="stylesheet" type="text/css" href="../css/pages.css">
 </head>
-<body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
 <ima>
 <br>
 <h1 align="center">About COVID-19</h1>
