--- a/pages/effect-economy.html
+++ b/pages/effect-economy.html
@@ -8,7 +8,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<body text="#FFFFFF" link="#FFFFFF" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
 <ima>
 
 <h1 align="center">Effect on economy</h1>
