--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <table width="200" border="1"  align="center">
   <tr>
     <td>
-      <img src="resources/images/label.jpg" width="547" height="113"  />
+      <img src="resources/images/label-scaled.jpg" width="547" height="113"  />
     </td>
   </tr>
 </table>
 <br>
 <br>
 <h1 >
- <img src="resources/images/SARS-CoV-2_without_background.png" width="79" height="79" style="vertical-align:middle">  <span class="heading-about">About COVID-19</span></h1>
+ <img src="resources/images/virus-image.png" width="79" height="79" style="vertical-align:middle">  <span class="heading-about">COVID-19</span></h1>
 <br>
 <p class="font-front-page">
   Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.<br>
@@ -41,8 +41,12 @@
 <p class="font-front-page">
   At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments. WHO will continue to provide updated information as soon as clinical findings become available.
 </p>
-
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
+<br>
+<br>
+<br>
+<br>
+<br>
+<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
   <tr>
     <td width="258" align="center"><a href="pages/links.html" >Click Here to know more</a></td>
   </tr>
