--- a/pages/links.html
+++ b/pages/links.html
@@ -10,14 +10,14 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" type="text/css" href="../css/links.css">
 </head>
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
 <br>
 <h1 align="center">Navigation</h1>
 <br>
 <br>
 <br>
-<table width="1045" border="6" align="center" background="../resources/images/blur/r-bg-2.jpg">
+<table width="1045" border="6" align="center" background="../resources/images/blur/red-binders-scaled.jpg">
    <tr>
     <td height="50" align="center"><a href="../index.html">Home</a></td>
    <td height="50" align="center"><a href="about-site.html">About Website</a></td>
