Change table look to match new background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 
 <table width="200" border="1"  align="center">
   <tr>
