--- a/pages/about-covid-19.html
+++ b/pages/about-covid-19.html
@@ -8,14 +8,14 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="stylesheet" type="text/css" href="../css/pages.css">
 </head>
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
 <br>
 <h1 align="center">About COVID-19</h1>
 <br>
 <br>
 <br>
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
+<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
   <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
     <td width="141" align="center"><a href="links.html" >Index</a>
