--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -8,8 +8,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
-
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <h1 align="center">Gallery</h1>
 <table width="1000" border="6" align="center" cellpadding="10" >
   <tr>
@@ -25,8 +24,8 @@
 </table>
 <br>
 
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
-  <tr>
+<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+      <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
     <td width="141" align="center"><a href="links.html" >Index</a>
     </td>
