--- a/pages/links.html
+++ b/pages/links.html
@@ -10,8 +10,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" type="text/css" href="../css/links.css">
 </head>
-<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
-<ima>
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF"><ima>
 <br>
 <h1 align="center">Navigation</h1>
 <br>
