--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -12,13 +12,14 @@ A {text-decoration: none;} .t1-title {
 	color: #F00;
 }
 </style>
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
-<ima>
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
+	<ima>
 <h1 align="center">&nbsp;</h1>
 <h1 align="center">Thanks for contacting me!</h1>
 
 
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
+<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+	
   <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
     <td width="141" align="center"><a href="links.html" >Index</a>
