--- a/pages/about-site.html
+++ b/pages/about-site.html
@@ -9,7 +9,7 @@
 <link rel="manifest" href="/site.webmanifest">
 </head>
 
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
 <br>
 <h1 align="center">About this website</h1>
