--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
 <br>
 <h1 align="center">Contact / Feedback</h1>
@@ -33,8 +33,8 @@ Message: <textarea name="message" placeholder="Type your message"></textarea>
 <br>
 <br>
 <br>
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
-  <tr>
+<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+    <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
     <td width="141" align="center"><a href="links.html" >Index</a>
     </td>
