--- a/pages/role-mobile.html
+++ b/pages/role-mobile.html
@@ -8,13 +8,13 @@
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<body text="#FFFFFF" link="#FF0000" vlink="#FF0000" alink="#FF0000">
-<ima>
+<body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
+  <ima>
 <h1 align="center">&nbsp;</h1>
 <h1 align="center">Role of mobile apps in door to door delivery of household items and medicines</h1>
 
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
-  <tr>
+<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+      <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
     <td width="141" align="center"><a href="links.html" >Index</a>
     </td>
