--- a/pages/about-covid-19.html
+++ b/pages/about-covid-19.html
@@ -2,20 +2,89 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>About COVID-19</title>
+
+<style type="text/css">
+	h1 {
+     text-shadow: 0 0 20px #FF0000;
+}
+p { 
+  text-shadow: 2px 1px 1px #000;
+}
+body {
+	background-image: url(../resources/images/red-strips.jpg);
+	background-repeat: repeat;
+	margin-left: 150px;
+	margin-top: 50px;
+	margin-right: 150px;
+	margin-bottom: 20px;
+}
+body,td,th {
+	color: #FFF;
+	font-family: Verdana, Geneva, sans-serif;
+	font-style: normal;
+}
+.heading-about {
+	font-family: Verdana, Geneva, sans-serif;
+}
+.font-front-page {
+	font-family: Georgia, Times New Roman, Times, serif;
+}
+.front-page-link {
+	font-family: Verdana, Geneva, sans-serif;
+}
+.purpose, .content, .details{
+  border:10px solid #000000;
+  border-radius: 20px;
+  padding:20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+#detailtable{
+  border:3px solid #000000;
+  border-radius: 20px;
+  padding:40px;
+}
+A {
+  text-decoration: none;
+  text-shadow: 0.5px 1px 5px #000;
+}
+</style>
+
+
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="stylesheet" type="text/css" href="../css/pages.css">
+
+
+
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
-<br>
-<h1 align="center">About COVID-19</h1>
-<br>
-<br>
-<br>
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+
+<h1 align="center">&nbsp;</h1>
+<h1 align="center"><a href="about-covid-19.html">About COVID-19</a></h1>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+
+<div>
+	<section align="center">
+		Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.
+Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment.
+&nbsp;&nbsp;
+<h2 align="left">How it spreads</h2>
+The virus that causes COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or exhales. These droplets are too heavy to hang in the air, and quickly fall on floors or surfaces.
+You can be infected by breathing in the virus if you are within close proximity of someone who has COVID-19, or by touching a contaminated surface and then your eyes, nose or mouth.<br><br>
+
+<iframe  align="center" width="550" height="300" src="https://www.youtube.com/embed/5DGwOJXSxqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
+ <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" id="learn">Learn more on who.int</a><br><br>
+	</section>
+</div>
+
+<table width="268" height="46" border="1" align="center" bgcolor="#000000">
+
   <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
     <td width="141" align="center"><a href="links.html" >Index</a>
