--- a/pages/about-covid-19.html
+++ b/pages/about-covid-19.html
@@ -3,44 +3,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>About COVID-19</title>
 
-<style type="text/css">
-	h1 {
-     text-shadow: 0 0 20px #FF0000;
-}
-p { 
-  text-shadow: 2px 1px 1px #000;
-}
-body {
-	background-image: url(../resources/images/red-strips.jpg);
-	background-repeat: repeat;
-	margin-left: 150px;
-	margin-top: 50px;
-	margin-right: 150px;
-	margin-bottom: 20px;
-}
-body,td,th {
-	color: #FFF;
-	font-family: Verdana, Geneva, sans-serif;
-	font-style: normal;
-}
-.heading-about {
-	font-family: Verdana, Geneva, sans-serif;
-}
-.font-front-page {
-	font-family: Georgia, Times New Roman, Times, serif;
-}
-.front-page-link {
-	font-family: Verdana, Geneva, sans-serif;
-}
-
-</style>
-
-
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-
+<link rel="stylesheet" type="text/css" href="../css/about-covid-19.css">
 
 
 </head>
