Changed button color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <br>
 <br>
 <br>
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+<table width="268" height="46" border="1" align="center" bgcolor="#000000">
   <tr>
     <td width="258" align="center"><a href="pages/links.html" >Click Here to know more</a></td>
   </tr>
